some changes to create conflict

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head>
     </head>
     <body>
-        <h3>My first page on git, modified.</h3>
+        <h3>My first page on git, modified. Conflict 2</h3>
     </body>
 </html>
