This is a test for Gcommit 	Pretty nice

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-    <head>
-    </head>
-    <body>
-        <h3>My first page on git, modified.</h3>
-    </body>
+	<head>
+	</head>
+	<body>
+		<p>Test body</p>
+	</body>
 </html>
