--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     </head>
     <body>
         <h3>My first page on git, modified. Conflict 2 ****</h3>
+        <h5>Check reverse commit</h5>
     </body>
 </html>
